# frontier

./: .gitignore  AUTHORS  CLAUDE.md  INSTALL  LICENSE  NOTICE  README.md  architecture.md  best-practices.md  constraints.txt  pyproject.toml  reference.md  render.yaml  requirements.txt
.claude/: launch.json
.claude/plans/: distribution-architecture.md  elicitation-design.md  etf-portfolio-demo.md  extensible-architecture.md  phase-1-remaining.md  quadratic-aggregation.md  tool-descriptions-and-rich-ui.md
.github/: dependabot.yml
.github/workflows/: ci.yml
designs/: frontier_design_doc_v1.md  phase0_mvp.md  roadmap.md  table-stakes-validation-plan.md  v1_features.md
dev_temp/: article_eval_tables.md  assessment_explore_tradeoff_constraints.md  build_cov_matrix.py  comparison_abc.md  comparison_llm_only.md  comparison_pyomo.md  etf_cov_matrix.json  eval_checklist.md  eval_runner_prompt.md  fetch_etf_data.py  fetch_etf_yfinance.py  fetch_yfinance.py  formulation_refinements.md  issues.md  plot_pareto_comparison.py  plot_pareto_consistent.py  plot_scenario_comparison.py  product_fix_triage.md  pymoo_30_etf.py  pymoo_30_etf_results.json  pymoo_etf.py  pyomo_etf_optimizer.py  pyomo_results.json  results.md  run2_comparison.md  run2_frontier.md  run2_llm_only.md  run2_pitfall_assessment.md  run2_pymoo.md  run_frontier.md  run_llm_only.md  run_pymoo.md  scenario_assignment.md  scenario_candidates.json  scenario_comparison.md  scenario_frontier_v2.md  scenario_llm_only.md  scenario_pymoo.md  scenario_pymoo_raw.json  scenario_pymoo_solver.py
dev_temp/etf_cache/: BNDX_ETF_PROFILE.json  BND_ETF_PROFILE.json  EMB_ETF_PROFILE.json  GLD_ETF_PROFILE.json  GSG_ETF_PROFILE.json  HYG_ETF_PROFILE.json  LQD_ETF_PROFILE.json  SCHD_ETF_PROFILE.json  TIP_ETF_PROFILE.json  VB_ETF_PROFILE.json  VDE_ETF_PROFILE.json  VEA_ETF_PROFILE.json  VFH_ETF_PROFILE.json  VGT_ETF_PROFILE.json  VHT_ETF_PROFILE.json  VNQ_ETF_PROFILE.json  VOO_ETF_PROFILE.json  VO_ETF_PROFILE.json  VTV_ETF_PROFILE.json  VUG_ETF_PROFILE.json  VWO_ETF_PROFILE.json  VXUS_ETF_PROFILE.json  VYM_ETF_PROFILE.json  etf_30_consolidated.json  etf_consolidated.csv  etf_consolidated.json
dev_temp/eval/: vol_calculator.py
engine/: explorer.py  metrics.py  models.py  optimizer.py  problem_io.py  store.py  viz.py
examples/: README.md  cuopt_colab.ipynb
examples/budget_allocation/: BRIEF.md  README.md  data.csv  problem.json  scores.json  solutions.json
examples/capacity_planning/: BRIEF.md  README.md  data.csv  problem.json  scores.json  solutions.json  variability_interactions.csv  variability_low_renewables.csv
examples/capital_project_selection/: README.md  problem.json  scores.json  solutions.json
examples/capital_project_selection_120/: BRIEF.md  README.md  data.csv  problem.json  runbook.md  scores.json  solutions.json
examples/capital_project_selection_300/: README.md  data.csv  problem.json  scores.json  solutions.json
examples/channel_budget/: BRIEF.md  README.md  data.csv  problem.json  reach_overlap.csv  scores.json  solutions.json
examples/charging_network_siting/: BRIEF.md  README.md  catchment_overlap.csv  data.csv  problem.json  scores.json  solutions.json
examples/claims_investigation_triage/: BRIEF.md  README.md  data.csv  problem.json  runbook.md  scores.json  solutions.json
examples/community_program_funding/: README.md  data.csv  problem.json  scores.json  solutions.json
examples/cuopt_bidirectional/: cuopt_bidirectional.ipynb
examples/cuopt_comparison/: cuopt_comparison.ipynb
examples/cuopt_portfolio/: cuopt_portfolio_frontier.ipynb  etf_universe.json
examples/exact_solver_comparison/: DEMO.md  exact_solver_comparison.ipynb
examples/interconnection_approvals/: BRIEF.md  README.md  data.csv  problem.json  scores.json  solutions.json
examples/investment_portfolio/: BRIEF.md  README.md  covariance.csv  covariance_recession.csv  data.csv  problem.json  runbook.md  scores.json  solutions.json
examples/portfolio/: scores.json
examples/production_mix/: BRIEF.md  README.md  data.csv  problem.json  scores.json  solutions.json
examples/research_cohort_selection/: BRIEF.md  README.md  data.csv  problem.json  scores.json  solutions.json
examples/scarce_supply_rationing/: BRIEF.md  README.md  data.csv  problem.json  runbook.md  scores.json  solutions.json
examples/shift_coverage_staffing/: README.md  data.csv  problem.json  scores.json  solutions.json
examples/supplier_selection/: BRIEF.md  README.md  concentration_interactions.csv  data.csv  problem.json  scores.json  solutions.json
frontier-web/: .env.example  README.md  package-lock.json  package.json
frontier-web/app/: globals.css  page.tsx
frontier-web/components/: ToolCallBlock.tsx
mcp_server/: guidance.py  jobs.py  server.py
solvers/: __init__.py  _scalarization.py  cuopt_backend.py  highs_backend.py
tests/: eval_checkpoint.py  test_anchor_corners.py  test_audit.py  test_certify.py  test_certify_curated.py  test_cuopt_matrix.py  test_dedup_binary.py  test_examine_handoff.py  test_explorer.py  test_explorer_edge_cases.py  test_front_gap.py  test_highs_backend.py  test_mcp_stdio_source.py  test_metrics.py  test_models.py  test_optimizer.py  test_optimizer_edge_cases.py  test_problem_io.py  test_proportional.py  test_quality_knee.py  test_regret_curated.py  test_reproducibility.py  test_scale_band.py  test_scenario_results_size.py  test_server.py  test_server_edge_cases.py  test_skill_resolver_integrity.py  test_solve_async.py  test_solver_selection.py  test_store.py  test_store_edge_cases.py  test_telemetry.py  test_tool_schema_guards.py  test_upstream_flow.py  test_upstream_kits.py  test_wire_compactness.py
ui/: .env.example  .gitignore  README.md  middleware.ts  node_modules  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+106 files in other folders)
