[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frontier"
version = "0.1.0"
description = "Multi-objective decision optimization engine, exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Cameron Afzal" },
]
keywords = ["mcp", "optimization", "pareto", "decision-making", "nsga", "pymoo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pymoo>=0.6",
    "pydantic>=2.0",
    "mcp[cli]>=1.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
# Extras the example notebooks need but the engine core does not (kept out of the
# base install so importing the engine stays lean). cuOpt is intentionally NOT
# here — it installs from NVIDIA's index and is GPU-only:
#   pip install --extra-index-url=https://pypi.nvidia.com cuopt-cu12
examples = ["matplotlib>=3.7", "pandas>=2.0"]
# CPU exact-solver backend (solver="highs"). A plain, cross-platform pip package —
# unlike cuOpt it needs no special index or GPU — but kept opt-in so the default NSGA path
# stays dependency-light. `pip install frontier[highs]`.
highs = ["highspy>=1.7"]

[project.urls]
Homepage = "https://github.com/cafzal/frontier"
Repository = "https://github.com/cafzal/frontier"
Issues = "https://github.com/cafzal/frontier/issues"

[project.scripts]
frontier = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["engine", "mcp_server", "solvers"]

[tool.pytest.ini_options]
pythonpath = ["."]
